fixed landing background on small devices

--- a/public/sass/sections/_landing.scss
+++ b/public/sass/sections/_landing.scss
@@ -2,6 +2,7 @@
  * Landing Section
  */
 #landing {
+    position: relative;
     background-image: url(/img/landing.jpg);
     background-size: cover;
     color: #fff;
@@ -12,6 +13,16 @@
     }
     @media (max-width: $screen-md-min) {
         padding: 40px 0;
+        #opaqueBackground {
+            background-color: #000;
+            position: absolute;
+            //z-index: -1;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            @include opacity(0.8);
+        }
     }
 
     h1 {
